# rl4fun

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.mpl-cache/: fontlist-v390.json
a2c/: CODE_WALKTHROUGH.md  README.md  __init__.py  main.py  trainer.py
a2c/agents/: __init__.py  actor_critic.py
a2c/cfgs/: cartpole_td.json  cartpole_td_test.json
a2c/docs/: A2C_TD.md  TD_2_GAE_bridge.md  implementation_plan.md
a2c/scripts/: run_all_settings.py  run_from_config.sh
reinforce/: main.py  trainer.py
reinforce/agents/: __init__.py  policy_categorical.py  value_net.py
reinforce/algo/: __init__.py  reinforce.py  returns.py
reinforce/cfgs/: cartpole_phase.json  cartpole_phase1.json
reinforce/docs/: REINFORCE.md  refactoring.md  reinforce_implementation_plan.md
reinforce/scripts/: __init__.py  run_all_phases.py  run_from_config.sh
reinforce/utils/: device.py  metadata.py  seeding.py  tb.py
rl_common/: __init__.py  device.py  env.py  metadata.py  returns.py  seeding.py  tb.py
scripts/: run_all_phases.py  run_from_config.sh
