[project]
name = "rl"
version = "0.1.0"
description = "Reinforcement learning experiments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "gymnasium[box2d]",
    "matplotlib",
    "tensorboard",
]

# Build-system is optional if you're not packaging a wheel.
# Add one later if you publish this as a package.

